payment gate way working

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ jwt_secret=coder24
 auth_email=rajibulislam60707877@gmail.com
 auth_pass=haqp galw vobo ydfa
 HOST_URL= http://localhost:5000/
+Store_Id= coder67d6eaf389987
+Store_password= coder67d6eaf389987@ssl
