--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "otp-generator-simple": "^1.0.3"
+    "otp-generator-simple": "^1.0.3",
+    "sslcommerz-lts": "^1.1.0"
   }
 }
